--- a/css/style2.css
+++ b/css/style2.css
@@ -1,20 +1,46 @@
-* {
-    margin: 0;
-    padding: 0;
-    text-decoration: none;
-    box-sizing: border-box;
-  
+form {
+    max-width: 600px;
+    margin: 40px auto;
+    padding: 20px;
+    background-color: #f9f9f9;
+    border: 1px solid #ccc;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   }
-
   
-body{
-    background-color: #333;
-   
-   }
-   
-header {
+  label {
+    display: block;
+    margin-bottom: 10px;
+  }
+  
+  input[type="text"], select {
     width: 100%;
-    height: 180px;
-    background-image: url(../img/texturas.jpg);
-  
+    padding: 10px;
+    margin-bottom: 20px;
+    border: 1px solid #ccc;
   }
+  
+  input[type="checkbox"] {
+    margin-right: 10px;
+  }
+  
+  input[type="radio"] {
+    margin-right: 10px;
+  }
+  
+  iframe {
+    width: 100%;
+    height: 450px;
+    border: 0;
+    margin-bottom: 20px;
+  }
+  
+  input[type="submit"] {
+    background-color: #4CAF50;
+    color: #fff;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+  
+ 
